Error handling tweaks for upload

--- a/views/partials/js_logic.ejs
+++ b/views/partials/js_logic.ejs
@@ -133,6 +133,7 @@
           showResponseModal();
         },
         error: function(err) {
+          console.log("ERROR: ", err);
           console.log(parseResponseText(err.responseText));
           showErrorModal(parseResponseText(err.responseText));
         }
